refactor : MemberService로 리팩토링